@@ -1,3 +1,8 @@
+2007-10-23  Lluis Sanchez Gual <lluis@novell.com> 
+
+	* libsteticui/ProjectBackend.cs: Remove undo annotations from the xml
+	  document when saving.
+
 2007-10-22  Lluis Sanchez Gual <lluis@novell.com> 
 
 	* libstetic/wrapper/objects.xml: Set default value for ShowScrollbars
